deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: simulador-key-deployment
  namespace: tlacotec
spec:
  selector:
    matchLabels:
      app: simulador-key
  replicas: 1 
  template:
    metadata:
      labels:
        app: simulador-key
    spec:
      containers:
      - name: oobravom-simulador-key
        image: oobravom/simulador-key:1.0-Final
        ports:
        - name: https
          containerPort: 8443
