servicie.yml
kind: Service
apiVersion: v1
metadata:
  name: simulador-key-service
  namespace: tlacotec
spec:
  selector:
    app: simulador-key
  ports:
  - name: https
    port: 8443
    targetPort: 8443
  type: LoadBalancer
