ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulador-key-ingress
  namespace: tlacotec
spec:
  tls:
    - hosts:
      - simulador-key.192.168.49.2.nip.io
  rules:
  - host: simulador-key.192.168.49.2.nip.io
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simulador-key-service
            port:
              number: 8443
